<resources>
    <string name="app_name">SmartPark</string>
    <string name="menu_search">Search</string>
    <string name="menu_createParking">Create parking</string>
    <string name="menu_createAnnouncement">New announce</string>
    <string name="menu_myAnnounce">My announces</string>
    <string name="menu_Profil">My profil</string>
    <string name="menu_logOut">Log out</string>
    <string name="signUpPseudoTxt">Pseudo :</string>
    <string name="signUpMailTxt">Mail :</string>
    <string name="signUpPassTxt">Password :</string>
    <string name="signUpPassConfTxt">Password conf. :</string>
    <string name="signUpTelTxt">Phone number :</string>
    <string name="signUpTxt">Sign up</string>
    <string name="profileTxt">Profile</string>
    <string name="modifyTxt">Modify</string>
    <string name="createParkingTxt">Create Parking</string>
    <string name="createParkingTitle">Title</string>
    <string name="createParkingDescription">Description</string>
    <string name="createParkingPlace">Place</string>
    <string name="createParkingStreet">Street</string>
    <string name="createParkingNumber">Number</string>
    <string name="createTxt">Create</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_Parking">Parkings</string>
    <string name="menu_myParking">My parking</string>
    <string name="menu_Announcement">Announcements</string>
    <string name="menu_myAnnoucements">My announcements</string>
    <string name="createAnnoucementTxt">New annoucement</string>
    <string name="createAnnoucementTitle">Title</string>
    <string name="createAnnoucementdateFrom">From</string>
    <string name="createAnnoucementdateTo">To</string>
    <string name="pick_dateFrom">Date from</string>
    <string name="pick_dateTo">Date to</string>
    <string name="createAnnoucementPrice">Price</string>
    <string name="title_activity_maps">Map</string>
    <string name="menuAnnoucement_mail">Send mail</string>
    <string name="menuAnnoucement_call">Call</string>
    <string name="searchTxt">Search</string>
    <string name="priceFromTxt">Price from</string>
    <string name="priceToTxt">to</string>
    <string name="createAnnoucementPlace">Place</string>
    <string name="menuAnnoucement_report">Report</string>
    <string name="createAnnouncementParking">Parking</string>

    <string-array name="places">
        <item>Namur</item>
        <item>Saint-Servais</item>
        <item>Bouge</item>
        <item>Jambe</item>
        <item>Salzinne</item>
    </string-array>
</resources>
