<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.projet.smartpark.business.SignUp"
    android:paddingLeft="10dip"
    android:paddingRight="50dip"
    android:paddingTop="50dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/signUpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_marginBottom="10dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/signUpPseudoTxt"
            android:padding="10dp"
            android:gravity="right"/>
        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/SignUpPseudo"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/signUpMailTxt"
            android:padding="10dp"
            android:gravity="right"/>
        <EditText
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/SignUpMail"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/signUpPassTxt"
            android:padding="10dp"
            android:gravity="right"/>
        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/SignUpPass"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/signUpPassConfTxt"
            android:padding="10dp"
            android:gravity="right"/>
        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/SignUpPassConf"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/signUpTelTxt"
            android:padding="10dp"
            android:gravity="right"/>
        <EditText
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/SignUpTel"
            android:layout_width="wrap_content"/>
    </TableRow>

    <Button
        android:text="@string/signUpTxt"
        android:id="@+id/signUpButton"
        android:textStyle="normal|bold"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_blue_dark" />
</TableLayout>
